--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "mongoose": "^6.3.0",
     "next": "12.1.5",
+    "nextjs": "0.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
