--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "mongoose": "^6.3.1",
+    "koa": "^2.13.4",
     "next": "12.1.5",
     "nextjs": "0.0.3",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "socket.io": "^4.5.0",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
