--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.js",
+    "**/*.css"
   ],
   "exclude": [
     "node_modules"
